# anki_server_deployer

./: .gitignore  README.md
anki-sync-server-rs/: build_windows.bat
dep/: Cargo.toml
dep/src/: error.rs  logic.rs  main.rs  ui.rs
updateaddr/src/: error.rs  lib.rs
