[package]
name = "deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {path="../iced"}
iced_native = { path = "../iced/native" }
iced_futures = { path = "../iced/futures" }
thiserror = "1.0.30"
async-std = "1.0"
winreg = "0.8"
mslnk = "0.1.7"